# skillforge-academy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_LABEL  ROADMAP.md  SECURITY.md  handoff.txt  package-lock.json  package.json  requirements-repopact.txt  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
audits/: AUDIT-2026-06-16-true-cert-factory.md  AUDIT-2026-06-17-security-plus-starter.md  AUDIT-2026-06-20-multi-cert-plan-reconciliation.md  AUDIT-2026-06-22-cross-platform-backups.md  AUDIT-2026-06-22-screen-reader-a11y.md  AUDIT-2026-06-30-android-mobile-foundation.md  AUDIT-2026-06-30-objective-drift-watch.md  AUDIT-2026-07-01-ios-mobile-foundation.md  AUDIT-2026-07-20-local-diagnostics.md  AUDIT-2026-07-20-privacy-security.md  AUDIT-2026-07-20-support-troubleshooting-docs.md  AUDIT-2026-07-20-ux-ia.md  index.md
decisions/: 0002-use-repo-native-markdown-foundation-as-the-initial.md  0003-first-formal-todo-is-true-certification-factory.md  0004-keep-a-compatibility-as-the-migration-anchor.md  0005-adopt-course-first-content-architecture.md  0008-consume-repopact-from-pypi.md  0009-no-telemetry-local-diagnostic-export-only.md
docs/: CODE-SIGNING.md  a-plus-complete-course-map.md  android-mobile.md  backup-restore.md  beta-candidate-1.4.1-beta.1.md  certification-authoring.md  course-lesson-content-model.md  diagnostics.md  getting-started.md  ios-mobile.md  multi-certification-plan.md  objective-drift-watch.md  (+5 more)
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+169 files in other folders)
