[package]
name = "skillforge-academy"
version = "1.3.1"
description = "Offline-first certification learning and exam-prep desktop app, starting with CompTIA A+."
authors = ["ForgeWire Labs"]
edition = "2021"

[lib]
name = "skillforge_academy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
